--- a/.github/workflows/workflow-run-collect-data.yml
+++ b/.github/workflows/workflow-run-collect-data.yml
@@ -4,6 +4,7 @@ run-name: "Collect data for run_id ${{ github.event.workflow_run.id }} attempt $
 on:
   workflow_run:
     workflows: # List workflow that we want to collect data for
+      - "Forge Performance Benchmark"
       - "On PR"
       - "On push"
       - "On nightly"
