--- a/.github/workflows/call-build-release-docker.yml
+++ b/.github/workflows/call-build-release-docker.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Download wheel
+      - name: Download wheels
         shell: bash
         env:
           GH_TOKEN: ${{ github.token }}
