--- a/.github/workflows/manual-test-single.yml
+++ b/.github/workflows/manual-test-single.yml
@@ -99,7 +99,7 @@ jobs:
       wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
       wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
       wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
-      wheel_version_override: "0.1.0.dev12"
+      wheel_version_override: ${{ inputs.release_tag }}
 
   # tested - individual tests work
   release-tests:
@@ -110,11 +110,14 @@ jobs:
       release_docker_image: ${{ needs.build-release-docker.outputs.docker_image }}
 
   # tested - working
-  # publish-release:
-  #   uses: ./.github/workflows/call-publish-release.yml
-  #   needs: [ release-tests, build-release-docker ]
-  #   secrets: inherit
-  #   with:
-  #     release_tag: "0.1.0.dev11"
-  #     docker_image_base: ${{ needs.build-release-docker.outputs.docker_image_base }}
-  #     is_nightly_release: true
+  publish-release:
+    uses: ./.github/workflows/call-publish-release.yml
+    needs: [ release-tests, build-release-docker ]
+    secrets: inherit
+    with:
+      release_tag: ${{ inputs.release_tag }}
+      docker_image_base: ${{ needs.build-release-docker.outputs.docker_image_base }}
+      is_nightly_release: true
+      wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+      wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
