--- a/.github/workflows/manual-benchmark.yml
+++ b/.github/workflows/manual-benchmark.yml
@@ -25,7 +25,7 @@ on:
         description: "Skip device performance measurement"
         required: false
         type: boolean
-        default: false
+        default: true
       perf_regression_check:
         description: "Enable perf metrics regression testing"
         required: false
@@ -35,6 +35,7 @@ on:
         description: "Run on shared runner"
         required: false
         type: boolean
+        default: true
 
 permissions:
   packages: write
