--- a/.github/workflows/manual-test-single.yml
+++ b/.github/workflows/manual-test-single.yml
@@ -92,23 +92,23 @@ jobs:
       release_tag_override: ${{ inputs.release_tag }}
 
   # tested - working
-  # build-release-docker:
-  #   uses: ./.github/workflows/call-build-release-docker.yml
-  #   needs: [ build-ttxla ]
-  #   secrets: inherit
-  #   with:
-  #     wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
-  #     wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
-  #     wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
-  #     wheel_version_override: ${{ inputs.release_tag }}
+  build-release-docker:
+    uses: ./.github/workflows/call-build-release-docker.yml
+    needs: [ build-ttxla ]
+    secrets: inherit
+    with:
+      wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+      wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
+      wheel_version_override: ${{ inputs.release_tag }}
 
-  # # tested - individual tests work
-  # release-tests:
-  #   uses: ./.github/workflows/call-release-tests.yml
-  #   needs: [ build-release-docker ]
-  #   secrets: inherit
-  #   with:
-  #     release_docker_image: ${{ needs.build-release-docker.outputs.docker_image }}
+  # tested - individual tests work
+  release-tests:
+    uses: ./.github/workflows/call-release-tests.yml
+    needs: [ build-release-docker ]
+    secrets: inherit
+    with:
+      release_docker_image: ${{ needs.build-release-docker.outputs.docker_image }}
 
   # # tested - working
   # publish-release:
