--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -32,7 +32,7 @@ pytest.ini @mrakitaTT @ajakovljevicTT @AleksKnezevic @jameszianxuTT @kmabeeTT @n
 
 # Third Party
 /third_party/ @mrakitaTT @pilkicTT @nvukobratTT @acolicTT @ajakovljevicTT @jameszianxuTT @sdjukicTT @sgligorijevicTT @acicovicTT
-/third_party/tt_forge_models @AleksKnezevic @kmabeeTT @mrakitaTT @nvukobratTT
+/third_party/tt_forge_models @AleksKnezevic @kmabeeTT @mrakitaTT @nvukobratTT @ajakovljevicTT
 
 # Integrations
 /integrations/vllm_plugin/ @AleksKnezevic @kmabeeTT @mmanzoorTT @ljovanovicTT
