--- a/.github/workflows/manual-nightly-release.yml
+++ b/.github/workflows/manual-nightly-release.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       release_tag:
-        description: 'Release tag'
+        description: "Release tag"
         type: string
         required: true
 
@@ -37,29 +37,33 @@ jobs:
       wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
       wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
       is_nightly_release: true
+      release_tag_override: ${{ inputs.release_tag }}
 
+  # tested - working
   build-release-docker:
     uses: ./.github/workflows/call-build-release-docker.yml
-    needs: [ build-ttxla, publish-release-wheel ]
+    needs: [ publish-release-wheel, build-ttxla ]
     secrets: inherit
     with:
       wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
       wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
       wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
-      wheel_version_override: ${{ needs.publish-release-wheel.outputs.release_tag }}
+      wheel_version_override: ${{ inputs.release_tag }}
 
-  release-tests:
-    uses: ./.github/workflows/call-release-tests.yml
+  # tested - individual tests work
+  # release-tests:
+  #   uses: ./.github/workflows/call-release-tests.yml
+  #   needs: [ build-release-docker ]
+  #   secrets: inherit
+  #   with:
+  #     release_docker_image: ${{ needs.build-release-docker.outputs.docker_image }}
+
+  # tested - working
+  publish-release:
+    uses: ./.github/workflows/call-publish-release.yml
     needs: [ build-release-docker ]
     secrets: inherit
     with:
-      release_docker_image: ${{ needs.build-release-docker.outputs.docker_image }}
-
-  publish-release:
-    uses: ./.github/workflows/call-publish-release.yml
-    needs: [ release-tests, build-release-docker, publish-release-wheel ]
-    secrets: inherit
-    with:
-      release_tag: ${{ needs.publish-release-wheel.outputs.release_tag }}
+      release_tag: ${{ inputs.release_tag }}
       docker_image_base: ${{ needs.build-release-docker.outputs.docker_image_base }}
       is_nightly_release: true
