--- a/.github/workflows/manual-test-single.yml
+++ b/.github/workflows/manual-test-single.yml
@@ -3,9 +3,8 @@ name: Run Test Single
 on:
   workflow_dispatch:
     inputs:
-      release_tag:
-        description: 'Release tag'
-        type: string
+      dir:
+        description: 'Path passed to pytest'
         required: true
         type: string
       mark:
@@ -60,62 +59,52 @@ permissions:
 
 run-name: 'Test ( Dir: ${{ inputs.dir }} - Mark: ${{ inputs.mark }} - Run-on: ${{ inputs.runs_on }} - Shared runner: ${{ inputs.shared_runners }} )'
 
-permissions:
-  contents: write
-  actions: write
-  id-token: write
-  packages: write
-  checks: write
-
 jobs:
   build-image:
     uses: ./.github/workflows/call-build-docker.yml
     secrets: inherit
+    with:
+      mlir_override: ${{ inputs.mlir_override }}
 
   build-ttxla:
-    uses: ./.github/workflows/call-build.yml
-    name: "Build tt-xla"
-    secrets: inherit
     needs: build-image
+    uses: ./.github/workflows/call-build.yml
+    secrets: inherit
     with:
       docker_image: ${{ needs.build-image.outputs.docker-image }}
+      mlir_override: ${{ inputs.mlir_override }}
 
-  publish-release-wheel:
-    uses: ./.github/workflows/call-publish-release-wheel.yml
+  generate-test-config:
+    needs: build-ttxla
+    runs-on: ubuntu-latest
+    outputs:
+      test-config: ${{ steps.generate.outputs.test-config }}
+    steps:
+      - id: generate
+        run: |
+          TEST_CONFIG=$(jq -n \
+            --arg runs_on '${{ inputs.runs_on }}' \
+            --arg dir '${{ inputs.dir }}' \
+            --arg mark '${{ inputs.mark }}' \
+            --arg shared_runners '${{ inputs.shared_runners }}' \
+            --arg args '${{ inputs.args }}' \
+            --arg contains '${{ inputs.contains }}' \
+            --argjson parallel_groups '${{ inputs.parallel_groups }}' \
+            '[{"runs-on": $runs_on,"name": "Test","dir": $dir,"test-mark": $mark,"shared-runners": $shared_runners,"args": $args,"contains": $contains,"parallel-groups": $parallel_groups}]')
+
+          echo $TEST_CONFIG
+
+          echo "test-config=$(echo "$TEST_CONFIG" | jq -c)" >> $GITHUB_OUTPUT
+
+  test:
+    if: always() && !cancelled() && inputs.preset != 'tt_forge_models'
+    uses: ./.github/workflows/call-test.yml
+    needs: [ build-image, build-ttxla, generate-test-config ]
     secrets: inherit
-    needs: [ build-ttxla ]
     with:
-      wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+      test_suite: 'Custom'
+      test_suite_custom: ${{ needs.generate-test-config.outputs.test-config }}
+      docker_image: ${{ needs.build-image.outputs.docker-image-base }}
+      artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
       wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
       wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
-      is_nightly_release: true
-      release_tag_override: ${{ inputs.release_tag }}
-
-  # tested - working
-  build-release-docker:
-    uses: ./.github/workflows/call-build-release-docker.yml
-    needs: [ publish-release-wheel, build-ttxla ]
-    secrets: inherit
-    with:
-      wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
-      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
-      wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
-      wheel_version_override: ${{ inputs.release_tag }}
-
-  # tested - individual tests work
-  # release-tests:
-  #   uses: ./.github/workflows/call-release-tests.yml
-  #   needs: [ build-release-docker ]
-  #   secrets: inherit
-  #   with:
-  #     release_docker_image: ${{ needs.build-release-docker.outputs.docker_image }}
-
-  # tested - working
-  publish-release:
-    uses: ./.github/workflows/call-publish-release.yml
-    needs: [ build-release-docker ]
-    secrets: inherit
-    with:
-      release_tag: ${{ inputs.release_tag }}
-      docker_image_base: ${{ needs.build-release-docker.outputs.docker_image_base }}
-      is_nightly_release: true
