remove references to a dev branch

--- a/.github/workflows/call-release-tests.yml
+++ b/.github/workflows/call-release-tests.yml
@@ -10,26 +10,26 @@ on:
 
 jobs:
   basic-tests:
-    uses: tenstorrent/tt-forge/.github/workflows/basic-tests.yml@vvukoman/extract-mlir-version-differently
+    uses: tenstorrent/tt-forge/.github/workflows/basic-tests.yml@main
     secrets: inherit
     with:
       docker-image: ${{ inputs.release_docker_image }}
+      ref: main
       project-filter: tt-xla
-      ref: vvukoman/extract-mlir-version-differently
 
   perf-benchmark:
-    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@vvukoman/extract-mlir-version-differently
+    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@main
     secrets: inherit
     with:
-      ref: vvukoman/extract-mlir-version-differently
       docker-image: ${{ inputs.release_docker_image }}
+      ref: main
       project: tt-xla
       sh-runner: true
 
   demo-test:
-    uses: tenstorrent/tt-forge/.github/workflows/demo-tests.yml@vvukoman/extract-mlir-version-differently
+    uses: tenstorrent/tt-forge/.github/workflows/demo-tests.yml@main
     secrets: inherit
     with:
       docker-image: ${{ inputs.release_docker_image }}
+      ref: main
       project-filter: tt-xla
-      ref: vvukoman/extract-mlir-version-differently
