--- a/tests/runner/test_config/jax/test_config_inference_tensor_parallel.yaml
+++ b/tests/runner/test_config/jax/test_config_inference_tensor_parallel.yaml
@@ -39,15 +39,13 @@ test_config:
 
   qwen_2_5/causal_lm/jax-0_5b-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=-0.011 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "Currently failing - https://github.com/tenstorrent/tt-xla/issues/3001. Severe PCC comparison failed: pcc=-0.011 < 0.99 required"
 
   qwen_2_5/causal_lm/jax-0_5b_instruct-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=-0.036 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "Currently failing - https://github.com/tenstorrent/tt-xla/issues/3001. Severe PCC comparison failed: pcc=-0.036 < 0.99 required"
 
   qwen_2_5/causal_lm/jax-1_5b-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
@@ -57,21 +55,18 @@ test_config:
 
   qwen_2_5/causal_lm/jax-1_5b_instruct-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=-0.019 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "Currently failing - https://github.com/tenstorrent/tt-xla/issues/3001. Severe PCC comparison failed: pcc=-0.019 < 0.99 required"
 
   qwen_2_5/causal_lm/jax-3b-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=-0.0005 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "Currently failing - https://github.com/tenstorrent/tt-xla/issues/3001. Severe PCC comparison failed: pcc=-0.0005 < 0.99 required"
 
   qwen_2_5/causal_lm/jax-3b_instruct-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=-0.001 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "Currently failing - https://github.com/tenstorrent/tt-xla/issues/3001. Severe PCC comparison failed: pcc=-0.001 < 0.99 required"
 
   qwen_2_5/causal_lm/jax-7b-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
@@ -87,33 +82,28 @@ test_config:
 
   qwen_2_5_coder/causal_lm/jax-0_5b-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=0.0073 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "Currently failing - https://github.com/tenstorrent/tt-xla/issues/3001. Severe PCC comparison failed: pcc=0.0073 < 0.99 required"
 
   qwen_2_5_coder/causal_lm/jax-1_5b-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=-0.054 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "Currently failing - https://github.com/tenstorrent/tt-xla/issues/3001. Severe PCC comparison failed: pcc=-0.054 < 0.99 required"
 
   qwen_2_5_coder/causal_lm/jax-1_5b_instruct-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=-0.025 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "Currently failing - https://github.com/tenstorrent/tt-xla/issues/3001. Severe PCC comparison failed: pcc=-0.025 < 0.99 required"
 
   qwen_2_5_coder/causal_lm/jax-3b-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=0.012 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "Currently failing - https://github.com/tenstorrent/tt-xla/issues/3001. Severe PCC comparison failed: pcc=0.012 < 0.99 required"
 
   qwen_2_5_coder/causal_lm/jax-3b_instruct-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
-    assert_pcc: false
-    reason: "Severe PCC comparison failed: pcc=-0.004 < 0.99 required"
+    status: NOT_SUPPORTED_SKIP
+    reason: "Currently failing - https://github.com/tenstorrent/tt-xla/issues/3001. Severe PCC comparison failed: pcc=-0.004 < 0.99 required"
 
   qwen_2_5_coder/causal_lm/jax-7b-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
