--- a/.github/Dockerfile.base
+++ b/.github/Dockerfile.base
@@ -18,15 +18,8 @@ RUN apt-get update && apt-get install -y \
     xxd \
     ffmpeg
 
-# Install requirements.txt as global Python 3.11 packages
-COPY python_package/requirements.txt /tmp/requirements.txt
-COPY venv/requirements-dev.txt /tmp/requirements-dev.txt
+# Install uv tool for managing Python packages
+RUN curl -LsSf https://astral.sh/uv/install.sh | env UV_INSTALL_DIR=/usr/local/bin sh
 
 # Now do the actual installation
 RUN ln -sf /usr/bin/FileCheck-17 /usr/bin/FileCheck
-RUN python3.11 -m pip install --upgrade pip --no-cache-dir && \
-    python3.11 -m pip install --index-url https://download.pytorch.org/whl/cpu $(grep 'torch==' /tmp/requirements.txt) && \
-    python3.11 -m pip install --index-url https://download.pytorch.org/whl/cpu $(grep 'torchvision==' /tmp/requirements-dev.txt) && \
-    python3.11 -m pip install -r /tmp/requirements.txt --no-cache-dir && \
-    python3.11 -m pip install -r /tmp/requirements-dev.txt --no-cache-dir && \
-    rm /tmp/requirements.txt /tmp/requirements-dev.txt
