Use uv for faster package installation and remove preinstalled Python deps from Docker base image.
- Install uv in Dockerfile.base instead of preinstalling Python packages
- explicitly use CPU-only PyTorch packages (torch==2.9.0+cpu, torchvision==0.24.0+cpu) and the PyTorch CPU index URL
- Update activate script to auto-detect and use uv when available (fallback to pip)
- Add UV_INDEX_STRATEGY=unsafe-best-match to resolve PyTorch packages across multiple indexes
- Remove SYSTEM_DIST_PACKAGES from PYTHONPATH since packages are now installed in venv
- Update CI workflows to use uv pip commands
- Filter --extra-index-url from setup.py requirements to avoid pip warnings
- Add --extra-index-url to requirements files and pin CPU-specific torch variants
- Pin librosa dependencies to prevent version conflicts
- Remove requirements.txt from Docker tag hash calculation

--- a/.github/workflows/call-build.yml
+++ b/.github/workflows/call-build.yml
@@ -154,7 +154,7 @@ jobs:
         run: |
             source venv/activate
             #Inspect the wheel build type on wheel file without installing the wheel
-            pip install wheel-inspect
+            uv pip install wheel-inspect
             wheel_summary=$(wheel2json ${{ steps.strings.outputs.work-dir }}/python_package/dist/pjrt_plugin_tt*.whl | jq -r '.dist_info.metadata.summary')
             match=$(echo "$wheel_summary" | grep -oP "build-type=${{ inputs.build_type }}" || true)
             echo "Wheel summary: $wheel_summary"
