--- a/.github/workflows/call-publish-release.yml
+++ b/.github/workflows/call-publish-release.yml
@@ -82,6 +82,7 @@ jobs:
           body: |
             Install via pypi
             pip install pjrt-plugin-tt==${{ inputs.release_tag }} --extra-index-url https://pypi.eng.aws.tenstorrent.com/
+            pip install vllm-tt==${{ inputs.release_tag }} --extra-index-url https://pypi.eng.aws.tenstorrent.com/
 
             Pull docker image
             docker pull ${{ inputs.docker_image_base }}:${{ inputs.release_tag }}
