--- a/.github/workflows/manual-nightly-release.yml
+++ b/.github/workflows/manual-nightly-release.yml
@@ -16,52 +16,60 @@ permissions:
   checks: write
 
 jobs:
-  build-image:
-    uses: ./.github/workflows/call-build-docker.yml
-    secrets: inherit
+  # build-image:
+  #   uses: ./.github/workflows/call-build-docker.yml
+  #   secrets: inherit
 
-  build-ttxla:
-    uses: ./.github/workflows/call-build.yml
-    name: "Build tt-xla"
-    secrets: inherit
-    needs: build-image
-    with:
-      docker_image: ${{ needs.build-image.outputs.docker-image }}
+  # build-ttxla:
+  #   uses: ./.github/workflows/call-build.yml
+  #   name: "Build tt-xla"
+  #   secrets: inherit
+  #   needs: build-image
+  #   with:
+  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
 
-  publish-release-wheel:
-    uses: ./.github/workflows/call-publish-release-wheel.yml
-    secrets: inherit
-    needs: [ build-ttxla ]
-    with:
-      wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
-      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
-      wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
-      is_nightly_release: true
-      release_tag_override: ${{ inputs.release_tag }}
+  # publish-release-wheel:
+  #   uses: ./.github/workflows/call-publish-release-wheel.yml
+  #   secrets: inherit
+  #   needs: [ build-ttxla ]
+  #   with:
+  #     wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+  #     wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+  #     wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
+  #     is_nightly_release: true
+  #     release_tag_override: ${{ inputs.release_tag }}
 
-  build-release-docker:
-    uses: ./.github/workflows/call-build-release-docker.yml
-    needs: [ publish-release-wheel, build-ttxla ]
-    secrets: inherit
-    with:
-      wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
-      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
-      wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
-      wheel_version_override: ${{ inputs.release_tag }}
+  # build-release-docker:
+  #   uses: ./.github/workflows/call-build-release-docker.yml
+  #   needs: [ publish-release-wheel, build-ttxla ]
+  #   secrets: inherit
+  #   with:
+  #     wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+  #     wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+  #     wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
+  #     wheel_version_override: ${{ inputs.release_tag }}
 
-  # ommited during testing
-  # release-tests:
-  #   uses: ./.github/workflows/call-release-tests.yml
+  # # ommited during testing
+  # # release-tests:
+  # #   uses: ./.github/workflows/call-release-tests.yml
+  # #   needs: [ build-release-docker ]
+  # #   secrets: inherit
+  # #   with:
+  # #     release_docker_image: ${{ needs.build-release-docker.outputs.docker_image }}
+
+  # publish-release:
+  #   uses: ./.github/workflows/call-publish-release.yml
   #   needs: [ build-release-docker ]
   #   secrets: inherit
   #   with:
-  #     release_docker_image: ${{ needs.build-release-docker.outputs.docker_image }}
+  #     release_tag: ${{ inputs.release_tag }}
+  #     docker_image_base: ${{ needs.build-release-docker.outputs.docker_image_base }}
+  #     is_nightly_release: true
 
-  publish-release:
-    uses: ./.github/workflows/call-publish-release.yml
-    needs: [ build-release-docker ]
+  publish-release-forge:
+    uses: ./.github/workflows/call-publish-forge-release.yml
+    # needs: [ publish-release ]
     secrets: inherit
     with:
       release_tag: ${{ inputs.release_tag }}
-      docker_image_base: ${{ needs.build-release-docker.outputs.docker_image_base }}
       is_nightly_release: true
