set dist dir for wheel output

--- a/.github/workflows/call-publish-forge-release.yml
+++ b/.github/workflows/call-publish-forge-release.yml
@@ -57,7 +57,8 @@ jobs:
           export VERSION_TAG=${{ inputs.release_tag }}
           pip install wheel
           # maybe will output wrong arch suffix (takes it from os it's built on)
-          python ./.github/scripts/forge-wheel-setup.py bdist_wheel
+          python ./.github/scripts/forge-wheel-setup.py bdist_wheel --dist-dir ./
+          ll *.whl
 
       - name: Publish wheels to PyPI
         shell: bash
